CMAKE_MINIMUM_REQUIRED (VERSION 2.6 FATAL_ERROR)

SET (PROJECT "FSM")
PROJECT (${PROJECT})

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -ggdb -std=c++0x -pedantic -Wextra -Wall -D_GLIBCXX_USE_SCHED_YIELD -D__GXX_EXPERIMENTAL_CXX0X__ -fPIC")
FILE (GLOB_RECURSE SOURCES FOLLOW_SYMLINKS source/*.cpp)
FILE (GLOB_RECURSE HEADERS FOLLOW_SYMLINKS include/*.h)

LINK_LIBRARIES(pthread)

INCLUDE_DIRECTORIES ("source" "include")

ADD_LIBRARY (${PROJECT} ${SOURCES})
INSTALL (TARGETS ${PROJECT}
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib
         COMPONENT library)
INSTALL (FILES ${HEADERS}
        DESTINATION "include/${PROJECT}"
        )
